modification du front

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <!-- Barre latérale -->
     <div class="sidebar">
-        <h1>Sportify</h1>
+        <h1>Spotify</h1>
         <ul>
-            <li><a href="#">🏠 Home</a></li>
-            <li><a href="#">🔍 Search</a></li>
-            <li><a href="#" class="active">📚 Your Library</a></li>
+            <li><a href="index.html">🏠 Home</a></li>
+            <li><a href="search.html">🔍 Search</a></li>
+            <li><a href="library.html" class="active">📚 Your Library</a></li>
         </ul>
         <hr>
         <ul class="playlists">
@@ -22,17 +22,7 @@
         </ul>
     </div>
 
-    <!-- Section principale -->
-    <div class="main-content">
-        <div class="header">
-            <h2>Your Playlists</h2>
-            <select id="sort-options">
-                <option>Most Relevant</option>
-                <option>Recently Played</option>
-                <option>Recently Added</option>
-                <option>Alphabetical</option>
-            </select>
-        </div>
+    
         <div class="grid">
             <!-- Exemple de cartes -->
             <div class="card">
