--- a/search.html
+++ b/search.html
@@ -9,7 +9,7 @@
 <body>
   <div class="main-container">
     <nav class="sidebar">
-      <h1>Sportify</h1>
+      <h1>Spotify</h1>
       <ul>
         <li><a href="index.html">Accueil</a></li>
         <li><a href="search.html">Recherche</a></li>
